# The-Max-Appraiser-

./: .gitignore  README.md  package.json  pyproject.toml  requirements-vercel.txt  requirements.txt  test-api.html  vercel-build.js  vercel-build.sh  vercel-python.json  vercel.json
api/: __init__.py  index.py  vercel.json
api/evaluate/: idea.js
app/: __init__.py
app/api/: app.py
app/core/: appraiser.py
app/frontend/: index.html  main.js  style.css
app/models/: evaluation.py
frontend-svelte/: package-lock.json  package.json
frontend-svelte/src/: app.css  app.html
frontend-svelte/src/routes/: +page.svelte
frontend-vite/: index.html  package-lock.json  package.json  vite.config.js
frontend-vite/src/: App.svelte
pages/api/: hello.js
