[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-software-appraiser"
version = "0.1.0"
description = "AI-powered software quality and value appraisal tool"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn>=0.21.0",
    "python-multipart>=0.0.6",
    "pydantic>=1.10.7",
    "python-dotenv>=1.0.0",
    "openai>=0.27.0",
    "requests>=2.28.0",
    "PyGithub>=1.58.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/ai-software-appraiser"
Bug Tracker = "https://github.com/yourusername/ai-software-appraiser/issues"
